--- a/src/index.html
+++ b/src/index.html
@@ -5,146 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
     <title>CS 2350 Starter Project</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">One</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Two</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Three</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <header>
+      <body id="landing">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand"><i>Book Club</i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
               </ul>
-            </li>
-          </ul>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Four</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Five</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Six</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="jumbotron">
+            </div>
+          </div>
+        </nav>
+    </header>
+    <div class="jumbotron p-5 text-center mh-100">
       <div class="row">
-        <div class="col-6">
-          <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-          <hr class="my-4">
-        </div>
-        <div class="col-6">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/b_T8zfMsqqM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
+        <h1 class="mb-3">This is a book club</h1>
+        <h3 class="mb-3">We talk about books here</h3>
       </div>
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      </p>
     </div>
-    <div class="container">
-      <button id="new_card" type="button" class="btn btn-success btn-lg float-right">Add a new card</button>
-      <h1>Featured contents</h1>
-      <form id="myForm" class="d-none">
-      <div class="form-group">
-        <label for="title">Title</label>
-        <input type="title" class="form-control" id="title" name="title">
-      </div>
-      <div class="form-group">
-        <label for="description">Description</label>
-        <textarea class="form-control" id="description" name="description"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="poster">Poster</label>
-        <input type="url" class="form-control" id="poster" name="poster">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-      <button type="button" class="btn btn-danger cancel-form">Cancel</button>
-    </form>
-    <div class="row" id="cards">
-    </div>
-  </div>
-    <footer class="mt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col"><ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
+    <div class="container-fluid mt-3">
+      <div class="row">
+        <div class="col-lg-8 float-left">
+          <div class="container rounded py-3">
+          <h2 class="text-center mt-2">Suggested Books</h2>
+          <hr class="my-3">
+          <div class="row" id="cards"></div>
           </div>
         </div>
+        <div class="col-lg-4 text-center float-right">
+          <div class="container rounded py-3" style="background-color:lavenderblush;">
+            <h2 class="text-center mt-2">Suggestion Form</h2>
+            <hr class="my-3">
+            <div class="row text-center m-4 rounded" style="background-color:bisque;">
+              <button id="new_card" type="button" class="btn btn-success btn-lg">Suggest a new book</button>
+              <form id="myForm" class="d-none">
+              <div class="form-group mt-3">
+                <label for="title">Title</label>
+                <input type="title" class="form-control" id="title" name="title">
+              </div>
+              <div class="form-group mt-3">
+                <label for="description">Description</label>
+                <textarea class="form-control" id="description" name="description"></textarea>
+              </div>
+              <div class="form-group mt-3">
+                <label for="poster">Poster</label>
+                <input type="url" class="form-control" id="poster" name="poster">
+              </div>
+              <div class="form-group mt-3">
+                <label for="author">Author</label>
+                <input type="text" class="form-control" id="author" name="author">
+              </div>
+              <div class="form-group mt-3">
+                <label for="year">Year of Publication</label>
+                <input type="text" class="form-control" id="year" name="year">
+              </div>
+              <hr class="my-4">
+              <button type="submit" class="btn btn-primary me-3 p-3">Submit</button>
+              <button type="button" class="btn btn-danger cancel-form ms-3 p-3">Cancel</button>
+              <hr class="my-4">
+            </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    <footer class="mt-3">
+      <div class="container-fluid mt-3 mx--2 pt-4 pb-2">
+        <h4>All rights reserved.</h4>
       </div>
     </footer>
     <script src="/javascripts/main.js"></script>
